kubernetes/media/lidarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lidarr
  namespace: media
spec:
  serviceName: "lidarr"
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      securityContext:
        fsGroup: 1000
      automountServiceAccountToken: false
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:2.1.7.4030-ls162
          resources:
            requests:
              cpu: 1000m
              memory: 500Mi
              ephemeral-storage: 32Gi
            limits:
              cpu: 2000m
              memory: 4Gi
              ephemeral-storage: 32Gi
          ports:
            - name: lidarr-http
              containerPort: 8686
              protocol: TCP
          volumeMounts:
            - name: lidarr-data
              mountPath: /config
            - name: homelab-nfs
              mountPath: /music
      volumes:
        - name: homelab-nfs
          nfs:
            server: 192.168.1.70
            path: /volume1/library/Music
  volumeClaimTemplates:
    - metadata:
        name: lidarr-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "openebs"
        resources:
          requests:
            storage: 32Gi
