kubernetes/media/lidarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: media
  labels:
    app: lidarr
spec:
  selector:
    app: lidarr
  ports:
    - port: 8686
      name: lidarr-http
